[gd_scene load_steps=15 format=3 uid="uid://dppr70up3djrx"]

[ext_resource type="Script" path="res://Scenes/player/player.gd" id="1_5gkox"]
[ext_resource type="Texture2D" uid="uid://bdeyhc2pcadqo" path="res://icon.svg" id="1_w5ucl"]
[ext_resource type="PackedScene" uid="uid://cdxn4cr6yyes5" path="res://Scenes/player/hud.tscn" id="3_xksh7"]
[ext_resource type="Texture2D" uid="uid://d7modwpw4afu" path="res://Assets/Sprites/scratch_sprite.png" id="4_uoh28"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hm2di"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8e6te"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_qm4jy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("scratchsprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSwordAttack/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("scratchsprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, -8)]
}

[sub_resource type="Animation" id="Animation_1qobo"]
resource_name = "attackLeft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSwordAttack/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, -8), Vector2(-16, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("scratchsprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("scratchsprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, -8), Vector2(-16, -8)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"mainAttackAnimationFinished"
}]
}

[sub_resource type="Animation" id="Animation_6us7o"]
resource_name = "attackRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("scratchsprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSwordAttack/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, -8), Vector2(16, -8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("scratchsprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, -8), Vector2(16, -8)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"mainAttackAnimationFinished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v84ll"]
_data = {
"RESET": SubResource("Animation_qm4jy"),
"attackLeft": SubResource("Animation_1qobo"),
"attackRight": SubResource("Animation_6us7o")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2musb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_crmdv"]
atlas = ExtResource("4_uoh28")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yopkk"]
atlas = ExtResource("4_uoh28")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y46iq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_crmdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yopkk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D"]
collision_layer = 3
floor_constant_speed = true
floor_snap_length = 3.0
script = ExtResource("1_5gkox")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4.76837e-07, -8)
scale = Vector2(0.113282, 0.113282)
texture = ExtResource("1_w5ucl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_hm2di")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -32)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PlayerArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea2D"]
position = Vector2(0, -8)
scale = Vector2(1.1, 1.1)
shape = SubResource("RectangleShape2D_8e6te")

[node name="Hud" parent="." instance=ExtResource("3_xksh7")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v84ll")
}

[node name="PlayerSwordAttack" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSwordAttack"]
position = Vector2(16, -8)
shape = SubResource("CircleShape2D_2musb")

[node name="scratchsprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-16, -8)
sprite_frames = SubResource("SpriteFrames_y46iq")
frame_progress = 0.261715

[connection signal="area_entered" from="PlayerArea2D" to="." method="_on_player_area_2d_area_entered"]
[connection signal="body_entered" from="PlayerArea2D" to="." method="_on_player_area_2d_body_entered"]
